able to fetch data from the check24 site and output into csv file

--- a/input.ini
+++ b/input.ini
@@ -3,3 +3,5 @@ url = https://www.check24.de/internet/
 pincode = 10785 Berlin
 street = Kurfürstenstraße
 house_no = 41
+input_csv_file = input_csv\filtered_adress.csv
+output_csv_file = input_csv\filtered_adress_results.csv
