added new script to convert csv to excel

--- a/input.ini
+++ b/input.ini
@@ -4,4 +4,4 @@ pincode = 10785 Berlin
 street = Kurfürstenstraße
 house_no = 41
 input_csv_file = input_csv\filtered_adress.csv
-output_csv_file = input_csv\filtered_adress_results_new.csv
+output_csv_file = output_csv\filtered_adress_results_f24.csv
